fix: correctly align active form label

--- a/src/app/_form.scss
+++ b/src/app/_form.scss
@@ -79,6 +79,6 @@
   &.active span,
   &.textarea span {
     opacity: 1;
-    transform: translateY(-10px);
+    transform: translateY(-11px);
   }
 }
